[gd_scene load_steps=2 format=3 uid="uid://b5630xr4v607r"]

[ext_resource type="Script" path="res://scripts/menus/ingame_menu/ingame_menu.gd" id="1_rwo5b"]

[node name="IngameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwo5b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 294.0
offset_bottom = 89.0
theme_override_constants/separation = 10

[node name="CoinsRichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "INGAMEHUD.COINS.LABEL"
fit_content = true
scroll_active = false

[node name="HealthRichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "INGAMEHUD.HEALTH.LABEL"
fit_content = true

[node name="WavesRichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "INGAMEHUD.WAVES.LABEL"
fit_content = true
